--- a/assets/css/styleContact.css
+++ b/assets/css/styleContact.css
@@ -1,13 +1,15 @@
 .containerContact {
-    margin: 75px 175px;
+    width: 960px;
+    margin: 75px 255px 75px 255px;
     padding: 5px;
 }
 
-.col-md-8 {
+.form1 {
     background-color: white;
 }
 
-.col-md-4 {
+.connect1 {
+    padding-top: 15px;
     background-color: white;
 }
 
@@ -25,4 +27,8 @@ h1 {
     text-align: center;
     font-weight: bold;
     color: teal;
+}
+
+img {
+    display: inline-block;
 }
