--- a/assets/css/styleIndex.css
+++ b/assets/css/styleIndex.css
@@ -1,5 +1,6 @@
 .containerIndex {
-    margin: 75px 175px;
+    width: 960px;
+    margin: 75px 255px 75px 255px;
     padding: 5px;
     background-color: white;
 }
@@ -9,6 +10,6 @@ h1 {
     color: teal;
 }
 
-img {
+.img-responsive {
     float: left;
 }
