--- a/assets/css/styleIndex.css
+++ b/assets/css/styleIndex.css
@@ -1,6 +1,6 @@
 .containerIndex {
-    width: 960px;
-    margin: 75px 255px 75px 255px;
+    max-width: 960px;
+    margin: auto;
     padding: 5px;
     background-color: white;
 }
